--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Push to Hugging Face Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN_IFOREST }}  # <--- your GitHub secret name
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}  # <--- your GitHub secret name
         run: |
           python - << 'EOF'
           import os
